# solana-stablecoin-standard

./: .gitignore  Anchor.toml  CLI_FIXES_SUMMARY.md  Cargo.toml  DEVNET_PROOF.md  Makefile  PROGRAM_IDS.md  README.md  Trident.toml  decode-owners.js  package-lock.json  package.json  test-seize.js
.github/workflows/: docs-sanity.yml
backend/: .env  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
backend/data/: indexer-state.json
backend/scripts/: smoke-test.ts  verify.sh
backend/src/: config.ts  (+1 more)
cli/: ARCHITECTURE.md  README.md  config.example.toml  create-treasury-ata.js  package-lock.json  package.json
docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md  OPERATIONS.md  SDK.md  SSS-1.md  SSS-2.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
programs/: Anchor.toml  Cargo.toml
programs/sss-token/: Cargo.toml
programs/sss-token/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/sss-token/src/instructions/: add_to_blacklist.rs  burn_tokens.rs  freeze_thaw.rs  init_hook_accounts.rs  initialize.rs  mint_tokens.rs  mod.rs  pause_unpause.rs  remove_from_blacklist.rs  seize.rs  transfer_authority.rs  update_minter.rs  update_roles.rs
programs/sss-token/src/state/: blacklist_entry.rs  mod.rs  role_manager.rs  stablecoin_config.rs
programs/sss-transfer-hook/: Cargo.toml
programs/sss-transfer-hook/src/: lib.rs
scripts/: docs-sanity.js
sdk/: README.md  package-lock.json  package.json  tsconfig.json
test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
tests/: sss-1.ts  sss-2.ts
tui/: package-lock.json  package.json  tsconfig.json
(+63 files in other folders)
