[package]
name = "sss-token"
version = "0.1.0"
description = "Solana Stablecoin Standard — Modular stablecoin SDK with SSS-1 and SSS-2 presets"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
spl-token-2022 = { version = "6", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.5"
spl-type-length-value = "0.6"
